<resources>
    <string name="app_name">Popular Movies</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="cinema">Cinema</string>
    <string name="see_all">See all</string>
    <string name="try_again">Try again</string>
    <string name="popular">Popular</string>
    <string name="rating">Rating</string>
    <string name="favorite">Favorite</string>
    <string name="movie_detail_backdrop_content_description">Backdrop of the movie\'s detail</string>
    <string name="empty_favorite_list">Your favorite movie list is empty. \nYou can add movies tapping on the heart in detail\'s screen :)</string>
    <string name="reviews">Reviews</string>
    <string name="error_remove_favorite_movie">An error occurred while tried to remove the favorite movie :(</string>
    <string name="error_add_favorite_movie">An error occurred while tried to add the favorite movie :(</string>
    <string name="success_remove_favorite_movie">Removed the movie from favorite list</string>
    <string name="success_add_favorite_movie">Added the movie to the favorite list</string>
    <string name="read_more">Read more</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="trailers">Trailers</string>
    <string name="youtube">YouTube</string>
    <string name="all_reviews">All reviews</string>
    <string name="all_trailers">All trailers</string>
    <string name="pipe_separator">|</string>
    <string name="list_view_type">List view type</string>
    <string name="default_date_format">yyyy-MM-dd</string>
    <string name="overview">Overview</string>
    <string name="movie_runtime_format">%1$sh %2$sm</string>
    <string name="read_all_reviews_format">Read all reviews (%1$s)</string>
    <string name="see_all_trailers_format">See all trailers (%1$s)</string>
    <string name="cast">Cast</string>
    <string name="search">Search</string>
    <string name="search_bold"><b>Search</b></string>
    <string name="type_at_least_three_characters">Type at least 3 characters</string>
    <string name="search_for_movies_here">Search for movies here</string>
    <string name="oops">Oops</string>
    <string name="error_something_went_wrong">Uhh… Unfortunately something went wrong. Please, try again</string>
    <string name="recommendations">Recommendations</string>
    <string name="sort">Sort</string>
    <string name="select_the_sort">Select the sort</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="added_order">Added order</string>
    <string name="release_date">Release date</string>
    <string name="most_popular">Most popular</string>
    <string name="most_rated">Most rated</string>
    <string name="genre_filter">Genre filter</string>
</resources>
