<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayoutMovieDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.design.widget.CollapsingToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <include
                layout="@layout/movie_header_detail"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarMovieDetail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.themovielist.ui.RequestStatusView
                android:id="@+id/rsvMovieDetailRequestStatus"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/movieDetailContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <TextView
                    android:id="@+id/tvMovieDetailSynopseLabel"
                    style="@style/LightMediumTextBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/overview"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvMovieDetailSynopsys"
                    style="@style/LightMediumText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDetailSynopseLabel"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing." />

                <View
                    android:id="@+id/divider"
                    style="@style/ContentDivider"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailSynopsys" />

                <ImageView
                    android:id="@+id/ivMovieDetailRatingIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/ivMovieDetailTimeIcon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:srcCompat="@drawable/star" />

                <ImageView
                    android:id="@+id/ivMovieDetailTimeIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivMovieDetailRatingIcon"
                    app:layout_constraintTop_toTopOf="@+id/ivMovieDetailRatingIcon"
                    app:srcCompat="@drawable/av_timer" />

                <TextView
                    android:id="@+id/tvMovieDetailRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailRatingIcon"
                    app:layout_constraintStart_toStartOf="@+id/ivMovieDetailRatingIcon"
                    app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailRatingIcon"
                    tools:text="7.6" />

                <TextView
                    android:id="@+id/tvMovieDetailRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-light"
                    app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailTimeIcon"
                    app:layout_constraintStart_toStartOf="@+id/ivMovieDetailTimeIcon"
                    app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailTimeIcon"
                    tools:text="1h 30m" />

                <View
                    android:id="@+id/divider2"
                    style="@style/ContentDivider"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailRuntime" />

                <TextView
                    android:id="@+id/tvMovieDetailReviewsLabel"
                    style="@style/LightMediumTextBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/reviews"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

                <include
                    android:id="@+id/movieDetailReviewInclude"
                    layout="@layout/movie_review_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDetailReviewsLabel" />

                <TextView
                    android:id="@+id/tvMovieDetailReadAllReviews"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/all_reviews"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/movieDetailReviewInclude" />

                <View
                    android:id="@+id/divider3"
                    style="@style/ContentDivider"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailReadAllReviews" />

                <TextView
                    android:id="@+id/tvMovieDetailTrailersLabel"
                    style="@style/LightMediumTextBold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/trailers"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/divider3" />

                <include
                    android:id="@+id/tvMovieDetailTrailerInclude"
                    layout="@layout/movie_trailer_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDetailTrailersLabel" />

                <TextView
                    android:id="@+id/tvMovieDetailSeeAllTrailers"
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/all_trailers"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieDetailTrailerInclude" />
            </android.support.constraint.ConstraintLayout>
        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>